# doge-bot

./: .gitignore  README.md  config.yaml  example-config.yaml  flake.nix  maubot.yaml  pyproject.toml
doge/: __init__.py  bot.py  db.py  entity.py
roombot/: __init__.py  bot.py  db.py  migrations.py
scripts/: login.sh  start.sh
