[tool.poetry]
name = "maubot-test"
version = "0.1.0"
description = ""
authors = ["Michael Pontus <m.pontus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
maubot = "^0.3.1"
flit_core = "^3.7.1"

[tool.poetry.dev-dependencies]
flit_core = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
